plugins {
    id 'java'
    id "io.freefair.lombok" version "5.0.0-rc6"
    id "org.sonarqube" version "2.8"
}

group 'com.gakshintala.fp'
version '1.0-SNAPSHOT'

repositories {
    jcenter()
}

java {
    sourceCompatibility = JavaVersion.VERSION_14
    targetCompatibility = JavaVersion.VERSION_14
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    jvmArgs(['--enable-preview'])
    useJUnitPlatform()
}

dependencies {
    implementation 'io.vavr:vavr:+'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-api', version: '+'
    implementation group: 'org.apache.logging.log4j', name: 'log4j-core', version: '+'
    testImplementation('org.junit.jupiter:junit-jupiter:+') {
        exclude group: 'junit', module: 'junit'
        exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
    }
}
